--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">FallDetection</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="sensor_readings">Sensor readings</string>
+    <string name="configuration">Configuration</string>
+    <string name="phone_number">Phone number</string>
+    <string name="save">Save</string>
 </resources>
