--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="sensor_readings">Sensor readings</string>
     <string name="configuration">Configuration</string>
+    <string name="charts">Charts</string>
     <string name="phone_number">Phone number</string>
     <string name="save">Save</string>
 </resources>
